--- a/CSS/catalogo.css
+++ b/CSS/catalogo.css
@@ -1,9 +1,26 @@
 .catalogo{
     margin: 1rem 0;
-    background-color: antiquewhite;
+    background-color: var(--color-secundario);
     display: flex;
     gap: 1rem;
+    padding: 1rem;
 }
+
+.header_catalogo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: scale(1.5);
+    margin-top: 1rem;
+}
+.header_catalogo h4{
+    color: #fff;
+}
+
+.header_catalogo form{
+    margin-top: 0.5rem;
+}
+
 .fondo-image{
     background-image: url("/images/bg-bigpixels.webp");
 }
@@ -27,6 +44,6 @@
     border-radius: 10px;
 }
 .button:hover{
-    background-color: rgb(73, 73, 73);
+    background-color: var(--color-hover);
     color: #fff;
 }
